--- a/index.html
+++ b/index.html
@@ -7,10 +7,18 @@
                 justify-content: space-evenly;
             }
         </style>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div
+           style = "background-image: url('assets/sky.png');
+            height: 25vh;">
+        </div>
+        <div 
+            style = " background-image: url('assets/grass.png');
+             height: 75vh;">
+        </div>
         <main>
-
         </main>
         <script src="./index.js"></script>
     </body>
